--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,55 @@
-.App {
-  text-align: center;
+html {
+  font-size: 62.5%;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body {
+  font-size: 1.6rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  background-color: transparent;
+  border: 1px solid #333;
+  padding: 1rem 3rem;
+  border-radius: 5px;
+}
+.btn:hover {
+  cursor: pointer;
+  background-color: steelblue;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App {
+  padding: 3rem;  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gold {
+  display: flex;
+}
+.gold__desc {
+  padding: 1rem;
+  margin-right: 2rem;
+}
+.gold__quantity {
+  padding: 1rem;
+  border: 1px solid #333;
+  width: 20%;
+}
+.location__container {
+  display: flex;
+  justify-content: space-between;
+}
+.location__item {
+  border: 2px solid #333;
+  width: 20%;
+  text-align: center;
+  padding-bottom: 2rem;
+}
+.activity-log__container {
+  padding: 2rem;
+  border: 2px solid #333;
+  max-height: 50rem;
+  overflow: scroll;
+}
+.activity-log__item {
+  display: flex;
+  justify-content: space-between;
+}
+.activity-log__item:not(:nth-last-child()) {
+  margin-bottom: 1rem;
 }
